<resources>
    <string name="app_name">ALBERTO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Setting Preferences Constants    -->
    <string name="mqtt_title">MQTT Details</string>
    <string name="server_address_title">Server Address</string>
    <string name="protcol_title">Protocol</string>
    <string name="port_title">Port</string>
    <string name="mqtt_topic_title">MQTT Topic</string>
    <string name="default_mqtt_topic">alberto</string>
    <string name="mqtt_port_default_value">1883</string>
    <string name="mqtt_username_title">Username</string>
    <string name="mqtt_password_title">Password</string>
</resources>
