<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/mqtt_title">
        <ListPreference
            app:defaultValue="tcp"
            app:entries="@array/protcol_entries"
            app:entryValues="@array/protcol_entries"
            app:key="protocol"
            app:title="@string/protcol_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="server_address"
            app:title="@string/server_address_title"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="port"
            app:title="@string/port_title"
            app:defaultValue="@string/mqtt_port_default_value"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="mqtt_topic"
            app:title="@string/mqtt_topic_title"
            app:defaultValue="@string/default_mqtt_topic"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="mqtt_username"
            app:title="@string/mqtt_username_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="mqtt_password"
            app:title="@string/mqtt_password_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>
